--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,10 +1,47 @@
+body {
+  background: black;
+  color: #ddd;
+}
+
+.container {
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.arena {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-image: linear-gradient(to bottom, blue, cyan);
+}
+
 .row {
   display: flex;
+  justify-content: center;
+  align-items: center;
   padding: 0;
   margin: 0;
 }
 
+.score {
+  margin: 0;
+  padding: 0;
+  color: green;
+}
+.level {
+  margin: 0;
+  padding: 0;
+  color: blue;
+}
+
 .cell {
-  height: 1.5rem;
-  width: 1.5rem;
+  height: 1rem;
+  width: 1rem;
+  background-color: black;
+  margin: 1px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
