--- a/src/gui/App.module.css
+++ b/src/gui/App.module.css
@@ -5,6 +5,22 @@ body {
   overflow: hidden;
 }
 
+.home {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 1rem;
+}
+
+.home button {
+  border: none;
+  background-color: green;
+  color: white;
+  font-family: inherit;
+  font-size: 2rem;
+  cursor: pointer;
+}
+
 .container {
   margin: 0 auto;
   display: flex;
