--- a/src/gui/App.module.css
+++ b/src/gui/App.module.css
@@ -3,6 +3,7 @@ body {
   color: #ddd;
   font-family: monospace;
   overflow: hidden;
+  touch-action: manipulation;
 }
 
 .home {
@@ -28,22 +29,7 @@ body {
   align-items: center;
 }
 
-.arena {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-image: linear-gradient(to bottom, blue, cyan);
-}
-
-.row {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0;
-  margin: 0;
-}
-
-.score {
+/* .score {
   margin: 0;
   padding: 0;
   color: green;
@@ -52,20 +38,4 @@ body {
   margin: 0;
   padding: 0;
   color: blue;
-}
-
-.upcomingPieces {
-  display: flex;
-  justify-content: center;
-  height: 2.5rem;
-}
-
-.cell {
-  height: 1rem;
-  width: 1rem;
-  background-color: black;
-  margin: 1px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+} */
