--- a/src/gui/Gameboard/TouchButtons.module.css
+++ b/src/gui/Gameboard/TouchButtons.module.css
@@ -3,25 +3,45 @@
     justify-content: space-between;
     position: relative;
     width: 100vw;
-    margin: -3rem;
+    margin-top: 1rem;
 }
 
 .btnSet {
     display: flex;
-    flex-direction: column
+    flex-direction: column;
 }
 
 .touchButton {
-    border: none;
-    background-color: yellow;
-    margin: -.5rem 0;
+    background-color: black;
+    margin: -.2rem 0;
     height: 3.5rem;
     width: 3.5rem;
     border-radius: 3.5rem;
+    border-width: 1.5px;
+    border-color: cyan;
+    font-size: 1.2rem;
+
+    display: flex;
+    justify-content: center;
+}
+.button_up {
+    margin-bottom: 1rem;
+}
+.oneButtonWidth {
+    display: flex;
+    justify-content: center;
+}
+.button_down {
+    margin-top: 1rem;
+}
+.twoButtonWidth {
+    display: flex;
 }
 
 .button_cw {
-    margin-left: -2.5rem;
+    margin-left: 0;
+    width: 4rem;
+    height: 3.5rem;
 }
 
 .button_cc {
