--- a/src/gui/Gameboard/styles/UpcomingPieces.module.css
+++ b/src/gui/Gameboard/styles/UpcomingPieces.module.css
@@ -1,7 +1,8 @@
 .upcomingPieces {
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  height: 2.5rem;
+  grid-area: c;
 }
 
 .row {
